2005-02-04  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/classMethod.c (retry):
	Removed unused variables.

	* kaffe/kaffevm/findInJar.c (discoveredClassHome):
	Only compile in if binreloc is enabled.
	
	* kaffe/kaffevm/classPool.c,
	kaffe/kaffevm/intrp/methodcalls.c,
	kaffe/kaffevm/intrp/machine.h:
	Added missing includes.

	* kaffe/kaffevm/jni/jni.c (Kaffe_DestroyJavaVM)
	Removed NONRETURNING attribute.

	* kaffe/kaffevm/jni/jni_i.h (Kaffe_DestroyJavaVM)
	Removed prototype.
	
2005-02-03  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-02  Mark Wielaard  <mark@klomp.org>

	* gnu/java/net/protocol/jar/Connection.java (is_trying): Removed
	field.
	(get): Don't use or set is_trying.

2005-02-03  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-02  Robert Schuster  <thebohemian@gmx.net>

        * gnu/java/beans/decoder/GrowableArrayContext.java: Fixed
        assignment behavior by using java.lang.reflect.Array.set()
        directly.
	
2005-02-03  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-02  Sven de Marothy  <sven@physto.se>

	* java/util/Calendar.java 
	(set) Invalidate all fields on first call to set().

	2005-02-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/SimpleDateFormat.java
	Lots of documentation updates.
	(readObject(java.io.ObjectInputStream)): Wraps
	IllegalArgumentException as specified.
	(compileFormat(String)): Uses standardChars
	rather than the local pattern characters.
	Throws IllegalArgumentException rather than
	storing a -1 field.
	(toString()): Extended to include all variables
	in a better format.
	(translateLocalizedPattern(String, String, String)):
	Renamed to better define the use of this method.

	2005-02-01  Sven de Marothy  <sven@physto.se>
	
	* java/util/GregorianCalendar.java
        (computeTime): Fixed handling of time zones.

	2005-02-01  Sven de Marothy  <sven@physto.se>
	
	* java/util/Calendar.java