@@ -1,5 +1,13 @@
 2005-02-04  Dalibor Topic  <robilad@kaffe.org>
 
+	* kaffe/kaffevm/intrp/icode.h (check_array_index):
+	Turned into a proper static inline funtion. Cleaned up
+	and documented. Made it throw an ArrayIndexOutOfBounds
+	exception for negative index values. That fixes a 
+	problem detected by OfBiz 3 on powerpc-linux-intrp.
+
+2005-02-04  Dalibor Topic  <robilad@kaffe.org>
+
 	* kaffe/kaffevm/classMethod.c (retry):
 	Removed unused variables.
 
